--- a/src/main/resources/public/scss/template/_variables.scss
+++ b/src/main/resources/public/scss/template/_variables.scss
@@ -313,6 +313,7 @@ $file-uploader-font-size:                    $font-size-xs;
 // 파일 미존재시
 $file-uploader-no-date-font-color:           $gray400;
 // view 모드
+$file-uploader-view-font-family:             $font-family-s;
 $file-uploader-view-font-size:               $font-size-xs;
 $file-uploader-view-font-color:              $gray800;
 $file-uploader-view-font-weight:             $font-weight-regular;
