--- a/src/main/resources/public/scss/theme/default/_thumbnail.scss
+++ b/src/main/resources/public/scss/theme/default/_thumbnail.scss
@@ -59,7 +59,7 @@
       .z-thumbnail-preview-image {
         width: 100%;
         height: 100%;
-        background-size: auto;
+        background-size: contain;
         background-repeat: no-repeat;
         background-position: center center;
       }
