#11450 "처리 이력"이 쌓이지 않는다. 1. 다수의 이력이 출력되도록 수정

--- a/src/main/resources/public/template/token/tokenTab.html
+++ b/src/main/resources/public/template/token/tokenTab.html
@@ -17,9 +17,7 @@
                     <th style="width: 20%;" class="align-left" th:text="#{token.label.process}"></th>
                 </tr>
                 </thead>
-                <tbody id="history">
-                <tr class="flex-row align-items-center"></tr>
-                </tbody>
+                <tbody id="history"></tbody>
             </table>
         </div>
         <!-- 관련문서 -->
